# Master-in-Telecom-Eng.

./: Computer_Vision  README.md
Computer Vision/: Readme.txt
Computer Vision/CV Lab 1/: New File  WIP.cpp  WIP.cpp~  lab1_student.cpp  lab1_student.cpp~  usb.desktop
Computer Vision/CV Lab 2/: lab2.cpp  prova.R  prova.cpp
Computer Vision/CV Lab 5/: Notes  panoramic_utils.h
Computer Vision/CV_Lab_7/: Lab 7 Notes
Computer Vision/CV_Lab_7/lab7_base_package/lab7_base_code/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lab7_test
Computer Vision/CV_Lab_7/lab7_base_package/lab7_base_code/include/: classifier.h
Computer Vision/CV_Lab_7/lab7_base_package/lab7_base_code/src/: lab7_test (copy).cpp  lab7_test.cpp
Computer Vision/Project/: source.cpp  test.sh
Information Security Project/InfoSecLab/: Improved OTP entity authentication.ipynb  Naive OTP Entity Authentication.ipynb
Information Security Project/OTP_entity_auth/: Improved_protocol.py  Laboratory report_ OTP_Authentication.docx  Naive_protocol.py
Machine Learning (Uni_PD) Labs/Lab1/: LC_FrancescoSantagiustina_1067494.ipynb  LR_FrancescoSantagiustina_1067494.ipynb  ccpp_Data.csv  ccpp_OLS-2.ipynb  iris notebook.ipynb  irisData_classification.ipynb
Machine Learning (Uni_PD) Labs/Lab2/: Regularization - Regression and Classification.ipynb  Regularization_FrancescoSantagiustina_1067494.ipynb
Machine Learning from Data (UPC)/: Readme.txt
Machine Learning from Data (UPC)/ML-Lab0/: Lab0_WIP1.docx  ML_Lab0_report.docx
Machine Learning from Data (UPC)/ML-Lab1/: ML_Lab1_report.docx
(+94 files in other folders)
